htop (3.0.5-3) UNRELEASED; urgency=medium

  * Another update to the hurd patch

 -- Daniel Lange <DLange@debian.org>  Fri, 15 Jan 2021 10:47:00 +0100

htop (3.0.5-2) unstable; urgency=medium

  * Backport patches to fix:
    - Possible segfault in colored ("rich") string handling
    - Issue in field background coloring
    - Build for GNU/hurd (missing PATH_MAX in their limits.h)

 -- Daniel Lange <DLange@debian.org>  Fri, 15 Jan 2021 08:00:00 +0100

htop (3.0.5-1) unstable; urgency=medium

  * New upstream release 3.0.5
  * Remove Debian patches upstreamed
  * BUGFIX / SECURITY: InfoScreen: fix uncontrolled format string
  * BUGFIX: Improve white text in the Light Terminal colour scheme
  * Enable the function bar on the main screen to be hidden (see Setup -> Display options)
  * BUGFIX: Reduce layout issues esp. around printing wide characters (not complete yet)
  * BUGFIX: Make the follow function exit cleanly after followed process died
  * Update help and man page for improved -t / -s options
  * Drop usage of formatted error messages from <err.h>
  * Show arrow indicating order of sorted process column
  * Lots of plumbing around the internal Hashtable, hardening and code cleanups
  * LibSensors: add support for Ryzen CPUs
  * BUGFIX: Fix CPU percentage on M1 silicon Macs
  * LoadMeter: dynamically adjust color and total of bar
  * Enable going back to previous search matches (Shift-F3)
  * Added keybind 'N' for sorting by PID (drops 'n'/'N' as not used before much)

 -- Daniel Lange <DLange@debian.org>  Mon, 11 Jan 2021 20:45:00 +0100

htop (3.0.3-2) unstable; urgency=medium

  [ Daniel Lange ]
  * Fix display in tree mode
  * Fix pausing screen updates (press Z key) in tree mode

  [ Graham Inggs ]
  * Fix kFreeBSD build

 -- Daniel Lange <DLange@debian.org>  Fri, 11 Dec 2020 21:00:00 +0100

htop (3.0.3-1) unstable; urgency=medium

  * New upstream release 3.0.3
  * Enable delayacct support, closes: #908636
  * Enable libsensors support