@@ -1,8 +1,10 @@
 htop (3.0.5-3) UNRELEASED; urgency=medium
 
   * Another update to the hurd patch
+  * Fix PROCDIR for the hurd build
+  * Disable sensors for hurd build (no libsensors-dev available)
 
- -- Daniel Lange <DLange@debian.org>  Fri, 15 Jan 2021 10:47:00 +0100
+ -- Daniel Lange <DLange@debian.org>  Sun, 17 Jan 2021 19:00:00 +0100
 
 htop (3.0.5-2) unstable; urgency=medium
 
